--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -14,7 +14,7 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title mb-4">Billing Address</h4>
-    <form action="#" method="POST">
+    <form action="{% url 'place_order' %}" method="POST">
       {% csrf_token %}
       <div class="form-row">
         <div class="col form-group">
@@ -85,36 +85,36 @@
       </thead>
       <tbody>
 
-      {% for cart_item in cart_items %}
-      <tr>
-      	<td>
-      		<figure class="itemside align-items-center">
-      			<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
-      			<figcaption class="info">
-      				<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-      				<p class="text-muted small">
-      					{% if cart_item.variations.all %}
-      						{% for item in cart_item.variations.all %}
-      							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
-      						{% endfor %}
-      					{% endif %}
-      				</p>
-      			</figcaption>
-      		</figure>
-      	</td>
-      	<td>
-      		<!-- col.// -->
-      				<label for="">{{cart_item.quantity}}</label>
-      	</td>
-      	<td>
-      		<div class="price-wrap">
-      			<var class="price">$ {{ cart_item.sub_total }}</var>
-      			<small class="text-muted"> $ {{ cart_item.product.price }} each </small>
-      		</div> <!-- price-wrap .// -->
-      	</td>
+				{% for cart_item in cart_items %}
+	      <tr>
+	      	<td>
+	      		<figure class="itemside align-items-center">
+	      			<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
+	      			<figcaption class="info">
+	      				<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+	      				<p class="text-muted small">
+	      					{% if cart_item.variation.all %}
+	      						{% for item in cart_item.variation.all %}
+	      							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
+	      						{% endfor %}
+	      					{% endif %}
+	      				</p>
+	      			</figcaption>
+	      		</figure>
+	      	</td>
+	      	<td>
+	      		<!-- col.// -->
+	      				<label for="">{{cart_item.quantity}}</label>
+	      	</td>
+	      	<td>
+	      		<div class="price-wrap">
+	      			<var class="price">$ {{ cart_item.sub_total }}</var>
+	      			<small class="text-muted"> $ {{ cart_item.product.price }} each </small>
+	      		</div> <!-- price-wrap .// -->
+	      	</td>
 
-      </tr>
-      {% endfor %}
+	      </tr>
+	      {% endfor %}
 
       </tbody>
       </table>
